--- a/JS TUTORIAL/DOM/Append.html
+++ b/JS TUTORIAL/DOM/Append.html
@@ -21,7 +21,7 @@
             // Adding text in h1 tag
         let text = document.createTextNode('This is h1 Tag')
             // Adding this text in H1 tag
-        h1.appendChild(text)
+        h1.appendChild(text) // Appendchild() is a function
             // Adding this h1 in elm
         elm.appendChild(h1)
     </script>
