Adding new list

--- a/JS TUTORIAL/DOM/AddingList.html
+++ b/JS TUTORIAL/DOM/AddingList.html
@@ -21,6 +21,7 @@
         let list1 = document.getElementById("list")
 
         let item = document.createElement("li")
+        item.textContent = "New list 5"
         list1.appendChild(item)
     </script>
 
