--- a/JS TUTORIAL/DOM/8.html
+++ b/JS TUTORIAL/DOM/8.html
@@ -1,4 +1,4 @@
-<!-- How to change and fetch html by innerHTML in JS -->
+<!-- How to change and fetch html by innerHTML property in JS -->
 
 <!DOCTYPE html>
 <html lang="en">
