--- a/JS TUTORIAL/DOM/InsertInBody.html
+++ b/JS TUTORIAL/DOM/InsertInBody.html
@@ -20,9 +20,9 @@
         // Adding New headline in body at top of list ...
         let parent = document.body;
         let elm = document.createElement("h2")
-        elm.textContent = 'This is new heading'
+        elm.textContent = 'This is new heading' // h2 mai text add hua...
         let list = document.getElementById("list")
-        parent.insertBefore(elm, list)
+        parent.insertBefore(elm, list) //--->  'elm' mai h2 hai  ___   'list' position set krti hai (last paa) ....
     </script>
 
 
