--- a/JS TUTORIAL/DOM/InsertInBody.html
+++ b/JS TUTORIAL/DOM/InsertInBody.html
@@ -22,7 +22,7 @@
         let elm = document.createElement("h2")
         elm.textContent = 'This is new heading' // h2 mai text add hua...
         let list = document.getElementById("list")
-        parent.insertBefore(elm, list) //--->  'elm' mai h2 hai  ___   'list' position set krti hai (last paa) ....
+        parent.insertBefore(elm, list) //--->  'elm' mai h2 hai  ___   'list' position set krti hai (last pah) ....
     </script>
 
 
