--- a/JS TUTORIAL/DOM/InsertBefore.html
+++ b/JS TUTORIAL/DOM/InsertBefore.html
@@ -22,7 +22,7 @@
         let item = document.createElement("li")
         item.textContent = "New list 5"
             // Adding New list 5 , at 2nd place
-        let position = list1.firstElementChild.nextElementSibling;
+        let position = list1.firstElementChild.nextElementSibling.nextElementSibling;
         list1.insertBefore(item, position)
     </script>
 
