--- a/JS TUTORIAL/DOM/8.html
+++ b/JS TUTORIAL/DOM/8.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="intro">
-        <p> Hello this i a p tag </p>
+        <p> Hello this is a p tag </p>
     </div>
 
     <script>
