--- a/JS TUTORIAL/DOM/3.html
+++ b/JS TUTORIAL/DOM/3.html
@@ -21,7 +21,7 @@
     <script>
         // Select Elements By TagName
         let div1 = document.getElementById("div1")
-        let elm = div1.getElementsByTagName("h2")
+        let elm = div1.getElementsByTagName("h2") // Agar document.getElementById  liktey toh pehla wala h2 tag b select hota jo ki nahi karna tha hamaii
             // to see this change we need to apply loop
         for (let i = 0; i < elm.length; i++) {
             elm[i].innerHTML = " hello "
