--- a/JS TUTORIAL/DOM/5.html
+++ b/JS TUTORIAL/DOM/5.html
@@ -30,8 +30,8 @@
     <script>
         // select parent from children
         let elm = document.getElementById("intro")
-        let parent = elm.parentElement
-        parent.innerHTML = "helo"
+        let parent = elm.parentElement // intro class wale k parent ko select kia 
+        parent.innerHTML = "helo" // aur uss k andrr wala sara html change krdea 
         console.log(parent)
     </script>
 </body>
