--- a/JS TUTORIAL/DOM/CreateClass.html
+++ b/JS TUTORIAL/DOM/CreateClass.html
@@ -26,7 +26,7 @@
         //  h1.appendChild(text)
 
 
-        // Adding text through property
+        // Adding text using property  'textContent'
         h1.textContent = "Content Added"
         document.body.appendChild(h1);
 
