--- a/JS TUTORIAL/DOM/InsertAdjacent.html
+++ b/JS TUTORIAL/DOM/InsertAdjacent.html
@@ -26,7 +26,7 @@
     <script>
         let elm = document.getElementById("intro")
         let newElm = "<h1> New H1 </h>"
-        elm.insertAdjacentHTML('beforebegin', newElm) //
+        elm.insertAdjacentHTML('beforebegin', newElm) // newElm will be added before the div , similarly we can try all the positions
     </script>
 
 
