--- a/JS TUTORIAL/DOM/InlineStyle.html
+++ b/JS TUTORIAL/DOM/InlineStyle.html
@@ -12,12 +12,12 @@
     <button id="btn">Send</button>
 
     <script>
-        // 1st Method
+        // 1st Method of inline stayle
         let btn = document.getElementById("btn")
             // Plus'+' operator use kartey hai taki agar pehle se style laga hua ho usmai toh woh override na hokey Add ho
         btn.style.cssText += "background-color:red; color:white"
 
-        // 2nd Method
+        // 2nd Method  of inline style
         btn.setAttribute("style", "background-color:Green")
     </script>
 </body>
