--- a/JS TUTORIAL/DOM/GetComputedCSS.html
+++ b/JS TUTORIAL/DOM/GetComputedCSS.html
@@ -19,6 +19,8 @@
 
     <script>
         let btn = document.getElementById("btn")
+
+        // 'getComputedStyle'   Method for knowing which color is already present
         let css = getComputedStyle(btn)
         console.log(css.color)
     </script>
