--- a/JS TUTORIAL/DOM/CssClasses.html
+++ b/JS TUTORIAL/DOM/CssClasses.html
@@ -54,7 +54,7 @@
         console.log(result)
 
         // We can do toggle as well ... Matlab agar koi class laga hai toh hata do , aur agr nahi laga toh laga dohh
-        //box.classList.toggle("gradient")
+        box.classList.toggle("gradient")
     </script>
 
 
